# symseek

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: cargo.yml
src/: cli.rs  core.rs  error.rs  lib.rs  main.rs  output.rs
src/cli/: args.rs  mod.rs
src/core/: detector.rs  mod.rs  resolver.rs  search.rs  types.rs
src/core/detector/: nix_binary_wrapper.rs  nix_program_name.rs
src/output/: formatter.rs  json.rs  mod.rs  styles.rs
tests/common/: mod.rs
