[package]
name = "symseek"
version = "0.1.0"
edition = "2024"
description = "A simple utility to trace symlinks recursively"
repository = "https://github.com/merrkry/symseek"
license = "GPL-3.0-or-later"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
path-clean = "1.0.1"
regex = "1.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
