[package]
name = "symseek"
version = "0.1.0"
edition = "2024"
description = "A simple utility to trace symlinks recursively"
repository = "https://github.com/merrkry/symseek"
license = "GPL-3.0-or-later"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
path-clean = "1.0"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.27"
assert_fs = "1.1"
predicates = "3.1"
pretty_assertions = "1.4"
assert_cmd = "2.2"
